# CMakeDoc

./: README.md
Ch01_Introduction/: README.md
Ch01_Introduction/example_01/: README.md  makefile
Ch01_Introduction/example_01/src/: main.c
Ch01_Introduction/example_02/: CMakeLists.txt  README.md
Ch01_Introduction/example_03/: CMakeLists.txt
Ch01_Introduction/example_04/: CMakeLists.txt
Ch01_Introduction/example_05/: CMakeLists.txt
Ch01_Introduction/example_06/: CMakeLists.txt
Ch01_Introduction/example_07/: CMakeLists.txt  README.md
Ch02_CMake/: README.md
Ch02_CMake/example_03/: CMakeLists.txt  README.md
Ch02_CMake/example_04/: CMakeLists.txt  README.md
Ch02_CMake/example_04/src/: calcPow.h  main.c
Ch02_Library/: README.md
Ch02_Library/example_08/: CMakeLists.txt  README.md  main.c
Ch02_Library/example_08/ColorPrint/: myPrint.c
Ch02_Library/example_08/includes/: myMathLib.h
Ch02_Library/example_08/src/: main.c
Ch02_Library/example_08/src/myMathLib/: CMakeLists.txt  myMathLib.c
Ch02_Library/example_09/: CMakeLists.txt  README.md
Ch02_Library/example_09/ColorPrint/: CMakeLists.txt  myPrint.h
Ch02_Library/example_09/src/: CMakeLists.txt  main.c
Ch02_Library/example_10/: .gitignore  CMakeLists.txt  README.md  config.h.in  main.c
Ch02_Library/example_10/ColorPrint/: CMakeLists.txt
Ch02_Library/example_10/cmake/: ColorPrintConfig.cmake  myMathLibConfig-version.cmake.in  myMathLibConfig.cmake.in
Ch02_Library/example_10/includes/: version.h.in
Ch02_Library/example_10/src/: main.c
Ch02_Library/example_10/src/myMathLib/: CMakeLists.txt
Ch02_Library/example_10/test/: CMakeLists.txt  test_assert.c
Ch02_Library/example_11/: CMakeLists.txt  README.md
Ch02_Library/example_11/src/: main.c
Ch02_Library/example_12/: .gitignore  CMakeLists.txt  README.md
Ch02_Library/example_12/includes/: config.h.in
Ch02_Library/example_12/src/: main.c
Ch02_Library/example_13/: CMakeLists.txt  README.md
Ch02_Library/example_13/src/: main.c
